--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.3)
 
-project(test)
+project(tests)
 
 enable_testing()
 include(DownloadProject)
@@ -14,18 +14,9 @@ download_project(
 
 add_subdirectory(${googletest_SOURCE_DIR} ${googletest_BINARY_DIR} EXCLUDE_FROM_ALL)
 
-#set(test_SRCS '')
-
-#add_custom_target(fixtures)
-#add_custom_command(
-#        TARGET fixtures
-#        COMMAND ${CMAKE_COMMAND} -E copy
-#            ${CMAKE_SOURCE_DIR}/data
-#            ${CMAKE_CURRENT_BINARY_DIR}/data
-#)
 
 file(COPY data DESTINATION .)
 
-add_executable(runUnitTests gtest.cpp ${test_SRCS})
-target_link_libraries(runUnitTests gtest gmock libjh)
-add_test(runUnitTests runUnitTests)
+add_executable(${PROJECT_NAME} main.cpp)
+target_link_libraries(${PROJECT_NAME} gtest libjh)
+add_test(${PROJECT_NAME} ${PROJECT_NAME})
